# techka

./: .gitignore  README.md  main.py  requirements.txt  techka.py
additional/csv/: bellingcat.csv  osint-framework.csv  osintpl.csv
additional/html/: bellingcat.html  osint-framework.html  osintpl_table.html
additional/python/: csvhtml.py  jsoncsv.py
additional/txt/: osintdojo.txt
auth/: auth_service.py
cli/: images.py  logo.py
core/auth/: auth_service.py
core/cli/: cli_controller.py  cli_handler.py  help.py  images.py  logo.py  texts.py
core/plugins/: plugin_handler.py
core/providers/: service_provider.py
core/rust_bindings/: Cargo.toml
core/rust_bindings/src/: data_processor.rs  lib.rs  text_processing.rs
generators/: generator.py
google/: google_service.py
meta/: facebook_service.py  messenger_service.py
plugins/: plugin_base.py
plugins/dork/: cool_dorks.txt  handler.py  processing.py
plugins/file/: handler.py  processing.py
plugins/github/: handler.py
plugins/linkedin/: handler.py  linkedin_service.py
plugins/payloads/: payload_generator.py
plugins/telegram/: handler.py
plugins/website/: collect.py  handler.py  processing.py  snapshot.py  techkagoofil.py
plugins/youtube/: handler.py
rust_bindings/src/: file_io.rs  lib.rs  models.rs  text_processing.rs
techka/4chan/: 4chan_service.py
techka/auth/: auth_service.py
techka/cli/: cli_handler.py  colors.py  file_handler.py  images.py  last_usage.py  logo.py  (+3 more)
telegram/: telegram_service.py
website/: collect.py  metagoofil.py  processing.py
wykop/: wykop_service.py
(+56 files in other folders)
