[package]
name = "techka_rust_bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.17", features = ["extension-module"] }
anyhow = "1.0"
regex = "1.5"
lazy_static = "1.4"
rayon = "1.5"
lopdf = "0.34.0"
walkdir = "2.5"

[lib]
crate-type = ["cdylib"]

[dependencies.memmap2]
version = "0.4"